# desired_grand_totals

./: README.md  pyproject.toml
desired_grand_total/: hooks.py  modules.txt
desired_grand_total/customizations/: sales_invoice.py
desired_grand_total/public/js/: sales_invoice.js
